tests/errors/sem_test_11.py
# sem_tests11.py 
test = 5 - "hey"
print(test)